# cheaptalk

./: meson.build  submodules.txt
examples/: opus-example.cpp  pipewire-capture-play-example.cpp
src/: client.cpp  config.hpp  jitter-buffer.hpp  net.cpp  net.hpp  opus.cpp  opus.hpp  protocol.hpp  server.cpp  sound-pipewire.cpp  sound.hpp
